Bug 411160 - Front-end code must be able to distinguish simple-folder query nodes. r=dietrich.